@@ -629,6 +629,48 @@ sp_document_items_in_box (SPDocument * document, ArtDRect * box)
 	return s;
 }
 
+/*
+ * Return list of items, that the parts of the item contained in box
+ *
+ * Assumes box is normalized (and g_asserts it!)
+ *
+ */
+
+GSList *
+sp_document_partial_items_in_box (SPDocument * document, ArtDRect * box)
+{
+	SPGroup * group;
+	SPItem * child;
+	SPObject * o;
+	ArtDRect b;
+	GSList * s;
+
+	g_return_val_if_fail (document != NULL, NULL);
+	g_return_val_if_fail (SP_IS_DOCUMENT (document), NULL);
+	g_return_val_if_fail (document->private != NULL, NULL);
+	g_return_val_if_fail (box != NULL, NULL);
+
+	group = SP_GROUP (document->private->root);
+
+	s = NULL;
+
+	for (o = group->children; o != NULL; o = o->next) {
+		if (SP_IS_ITEM (o)) {
+			child = SP_ITEM (o);
+			sp_item_bbox (child, &b);
+			if ((((b.x0 > box->x0) && (b.x0 < box->x1)) ||
+			     ((b.x1 > box->x0) && (b.x1 < box->x1)))
+			    &&
+			    (((b.y0 > box->y0) && (b.y0 < box->y1)) ||
+			     ((b.y1 > box->y0) && (b.y1 < box->y1)))) {
+				s = g_slist_append (s, child);
+			}
+		}
+	}
+
+	return s;
+}
+
 /* Resource management */
 
 gboolean
